==> paulvha/SAMD21/SoftwareSerial/src/SoftwareSerial.cpp <==
#include "SoftwareSerial.h"
#include "variant.h"
#define SWS_TC         TC4        // as we use 32 bit counter TC5 is also used
#define SWS_TC_IRQn    TC4_IRQn

bool SoftwareSerial::begin(uint32_t baudRate)
{
  return(begin(baudRate, SERIAL_8N1));
}

bool SoftwareSerial::begin(uint32_t baudRate, uint16_t config)
{

  // in case baudrate change is requested
  if (IsActive) end();
  IsActive = true;

  if ( g_APinDescription[_rxPin].ulPinType == PIO_NOT_A_PIN )
  {
    return false ;
  }

  if ( g_APinDescription[_txPin].ulPinType == PIO_NOT_A_PIN )
  {
    return false ;
  }

  if (!firstTimeRunning)
  {
    firstTimeRunning = true;

    NVIC_SetPriority(SWS_TC_IRQn, 0);

    // Enable GCLK for TC4 and TC5 (timer counter input clock)
    GCLK->CLKCTRL.reg = (uint16_t) (GCLK_CLKCTRL_CLKEN | GCLK_CLKCTRL_GEN_GCLK0 | GCLK_CLKCTRL_ID(GCM_TC4_TC5));
    while (GCLK->STATUS.bit.SYNCBUSY);
  }

  stopTimer();

#ifdef DEBUG
  digitalWrite(_debugPin, LOW);
  pinMode(_debugPin, OUTPUT);
#endif

  // set _RXPin
  if (! _invertLogic)  pinMode(_rxPin, INPUT_PULLUP);
  else pinMode(_rxPin, INPUT_PULLDOWN);

  // set TXpin information
  digitalWrite(_txPin, _invertLogic ? LOW : HIGH);
  pinMode(_txPin, OUTPUT);

  _txport = g_APinDescription[_txPin].ulPort;
  _txpad = g_APinDescription[_txPin].ulPin;
  _txpadMask = (1ul << _txpad);

  // set config
  softwareserialSetConfig(config);

  // calculate timing
  rxSysTicksPerBit = (TIMER_FREQ / baudRate) * 0.93; //Shorten the number of sysTicks a small amount because we are doing a mod operation
  txSysTicksPerBit = (TIMER_FREQ / baudRate) - 8;   //Shorten the txSysTicksPerBit by the number of ticks needed to run the txHandler ISR

  // fine tine (as much as possible)
  if (baudRate == 19200) txSysTicksPerBit = txSysTicksPerBit - 4;
  if (baudRate == 38400) txSysTicksPerBit = txSysTicksPerBit - 4;
  if (baudRate == 57600) txSysTicksPerBit = txSysTicksPerBit - 5;
  if (baudRate == 115200) txSysTicksPerBit = txSysTicksPerBit - 5;

  rxSysTicksPerByte = (TIMER_FREQ / baudRate) * (_dataBits + _parityBits + _stopBits);

  //During RX, if leftover systicks is more than a fraction of a bit, we will call it a bit
  //This is needed during high speed when cmpr ISR extends into the start bit of the following byte
  rxSysTicksPartialBit = rxSysTicksPerBit / 4;

  txSysTicksPerStopBit = txSysTicksPerBit * _stopBits;

  // set handle as this instance
  SWS_handle = this;

  // Config the timer
  configTimer();

  // start waiting input
  listen();

  return true;
}

void SoftwareSerial::rxBit(void)
{
  uint32_t bitTime;
#ifdef DEBUG
  digitalWrite(_debugPin, HIGH);
#endif

  if (lastBitTime == 0)
  {
    startTimer(rxSysTicksPerByte);  // set BYTE time out
    bitCounter = 0;
    bitType = false;
    rxInUse = true;                 // Indicate we are now in process of receiving a byte
    lastBitTime = SWS_TC->COUNT32.COUNT.reg;
  }
  else
  {
    bitTime = SWS_TC->COUNT32.COUNT.reg; // Capture current running

    //Calculate the number of bits that have occured since last PCI
    uint8_t numberOfBits = (bitTime - lastBitTime) / rxSysTicksPerBit;

    if (bitCounter == 0)
    {
      //Catch any partial bits
      //For very high bauds the final interrupt spills over into the
      //start bit of the next byte. This catches the partial systicks and correctly
      //identifies the start bit as such.
      uint16_t partialBits = (bitTime - lastBitTime) % rxSysTicksPerBit;
      if (partialBits > rxSysTicksPartialBit)
      {
#ifdef DEBUG
//      SerialUSB.println("Partial!");
#endif
        numberOfBits++;
      }

      //Exclude start bit from byte shift
      bitCounter++;
      numberOfBits--;
    }

    if (_parity)
    {
      if (numberOfBits + bitCounter > _dataBits + _parityBits)
      {
        numberOfBits--; //Exclude parity bit from byte shift
      }
    }

    for (uint8_t y = 0; y < numberOfBits; y++) //Add bits of the current bitType (either 1 or 0) to our byte
    {
      incomingByte >>= 1;
      if (bitType == true)
        incomingByte |= 0x80;
    }
    bitCounter += numberOfBits;
    bitType = !bitType;    //Next bit will be inverse of this bit
    lastBitTime = bitTime; //Remember this bit time as the starting time for the next PCI
  }

#ifdef DEBUG
  digitalWrite(_debugPin, LOW);
#endif
}

void SoftwareSerial::beginTX()
{
  bitCounter = 0;

  //Initiate start bit
  if (_invertLogic == false)
  {
    PORT->Group[_txport].OUTCLR.reg = _txpadMask; //Normal logic, low is start bit
  }
  else
  {
    PORT->Group[_txport].OUTSET.reg = _txpadMask;
  }

  startTimer(txSysTicksPerBit);
}

void SoftwareSerial::txHandler()
{
#ifdef DEBUG
  digitalWrite(_debugPin, HIGH);
#endif

  if (bitCounter < _dataBits) // Data bits 0 to 7
  {
    restartTimer(txSysTicksPerBit);                   //Direct reg write to decrease execution time
      if (outgoingByte & 0x01) PORT->Group[_txport].OUTSET.reg = _txpadMask;
      else PORT->Group[_txport].OUTCLR.reg = _txpadMask;

    /*if (_invertLogic == false){ // normal operation
      if (outgoingByte & 0x01) PORT->Group[_txport].OUTSET.reg = _txpadMask;
      else PORT->Group[_txport].OUTCLR.reg = _txpadMask;
    }
    else {
      if (outgoingByte & 0x01) PORT->Group[_txport].OUTCLR.reg = _txpadMask;
      else PORT->Group[_txport].OUTSET.reg = _txpadMask;
    }
*/
    outgoingByte >>= 1;
    bitCounter++;
  }
  else if (bitCounter == _dataBits) //Send parity bit or stop bit(s)
  {
    if (_parity)
    {
      //Send parity bit
      restartTimer(txSysTicksPerBit);                   //Direct reg write to decrease execution time
      if (_parityForByte)
      {
        if (_invertLogic == false) PORT->Group[_txport].OUTSET.reg = _txpadMask;
        else PORT->Group[_txport].OUTCLR.reg = _txpadMask;
      }
      else
      {
        if (_invertLogic == false) PORT->Group[_txport].OUTCLR.reg = _txpadMask;
        else PORT->Group[_txport].OUTSET.reg = _txpadMask;
      }
    }
    else
    {
      //Send stop bit
      restartTimer(txSysTicksPerStopBit);                   //Direct reg write to decrease execution time

      if (_invertLogic == false) PORT->Group[_txport].OUTSET.reg = _txpadMask;
      else PORT->Group[_txport].OUTCLR.reg = _txpadMask;

    }
    bitCounter++;
  }
  else if (bitCounter == (_dataBits + 1))                 //Send stop bit or begin next byte
  {
    if (_parity)
    {
      //Send stop bit
      restartTimer(txSysTicksPerStopBit);                 //Direct reg write to decrease execution time

      if (_invertLogic == false) PORT->Group[_txport].OUTSET.reg = _txpadMask;
      else PORT->Group[_txport].OUTCLR.reg = _txpadMask;

      bitCounter++;
    }
    else
    {
      //If done sending
      if (txBufferTail == txBufferHead)
      {
        // Disable the timer interrupt in the NVIC.
        stopTimer();

        //All done!
        txInUse = false;

        //Reattach PCI so we can hear rx bits coming in
        listen();
      }
      else
      {
        //Send next byte in buffer
        txBufferTail = (txBufferTail + 1) % SWS_BUFFER_SIZE;
        outgoingByte = txBuffer[txBufferTail];
        calcParityBit();
        beginTX();
      }
    }
  }
  else if (bitCounter == (_dataBits + 2)) //Begin next byte
  {
    //if done sending
    if (txBufferTail == txBufferHead)
    {
      // Disable the timer interrupt in the NVIC.
      stopTimer();

      //All done!
      txInUse = false;

      //Reattach PCI so we can hear rx bits coming in
      listen();
    }
    else
    {
      //Send next byte in buffer
      txBufferTail = (txBufferTail + 1) % SWS_BUFFER_SIZE;
      outgoingByte = txBuffer[txBufferTail];
      calcParityBit();
      beginTX();
    }
  }
#ifdef DEBUG
  digitalWrite(_debugPin, LOW);
#endif
}

void SoftwareSerial::rxEndOfByte()
{
  stopTimer();

  //Finish out bytes that are less than 8 bits
#ifdef DEBUG
   // SerialUSB.println("bitCounter: ");
   // SerialUSB.println(bitCounter);
   // SerialUSB.println("incoming: ");
   // SerialUSB.println(incomingByte, HEX);

#endif
  bitCounter--; //Remove start bit from count

  //Edge case where we need to do an additional byte shift because we had data bits followed by a parity bit of same value
  if (_parity)
  {
    bitCounter = bitCounter - _parityBits; //Remove parity bit from count
    if (bitType == true)
      bitCounter++;
  }

  while (bitCounter < 8)
  {
    incomingByte >>= 1;
    if (bitType == true)
      if (bitCounter < _dataBits)
      {
        incomingByte |= 0x80;
      }
    bitCounter++;
  }

  //TODO - Check parity bit if parity is enabled

  if (_invertLogic)
    incomingByte = ~incomingByte;

  //See if we are going to overflow buffer
  uint8_t nextSpot = (rxBufferHead + 1) % SWS_BUFFER_SIZE;
  if (nextSpot != rxBufferTail)
  {
    //Add this byte to the buffer
    rxBuffer[nextSpot] = incomingByte;
    rxBufferHead = nextSpot;
  }
  else
  {
    _rxBufferOverflow = true;
  }

  lastBitTime = 0; //Reset for next byte

  rxInUse = false; //Release so that we can TX if needed
}

void SoftwareSerial::listen()
{
  // see example4_multiport
  if (SWS_handle != this) {
    SWS_handle->stopListening();                     // Gracefully shut down previous instance
  }

  lastBitTime = 0;

  SWS_handle = this;

  // Attach callback to RX pin
  attachInterrupt(_rxPin, _software_serial_isr, CHANGE);
}

void SoftwareSerial::stopListening()
{
  // Disable the timer interrupt in the NVIC.
  stopTimer();

  detachInterrupt(_rxPin);

  SWS_handle == NULL;
}
